2003-07-02  Borut Razem <borut.razem@siol.net>

	* src/port.h, src/SDCCmain.c, src/pic/glue.h, src/pic/main.c,
	src/pic16/glue.h, sdcc/src/pic16/main.c, src/izt/i186.c,
	src/izt/tlcs900h.c, src/avr/main.c, src/ds390/main.c, src/mcs51/main.c,
	src/xa51/main.c, src/z80/main.c:
	virtualization of glue() function: each port has it's own glue function,
	which is accessed by do_glue function pointer in PORT.general structure

2003-07-01 Kevin Vigor <kevin@vigor.nu>

        * DS800C400 fun, improved ROM interface and tinibios.

2003-06-27 Kevin Vigor <kevin@vigor.nu>

	* More support for DS80C400. Now includes beginning of interface to ROM.

2003-06-25  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (gencjneshort): fixed bug #760345

2003-06-20  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/aomf51.c: Make sure the size of the last procedure is correct.

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/z80/main.c: fixed Z80 port again: missing -k library paths in linker command line

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/SDCCutil.h, src/SDCCutil.c, src/SDCCglobl.h, src/SDCCmain.c, src/z80/main.c:
	fixed Z80 port - crt0.o: cannot open.

2003-06-19  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/MySystem.c (merge_command): revert bad fix

2003-06-18  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex, src/SDCCmain.c: fixed some warnings, introduced with changes made 15.06.1003

2003-06-18  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* src/SDCCglobl.h, src/SDCCmain.c, doc/sdccman.lyx:
	option --use-stdout sends errors to stdout instead of stderr.

2003-06-18  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/MySystem.c (merge_command): quick fix for Linux segfault with \"cmd\" arg

2003-06-15  Borut Razem <borut.razem@siol.net>

	* support/cpp2/sdcc.h: HAVE_DOS_BASED_FILE_SYSTEM defined for _WIN32
	* src/SDCC.lex: cloneXxx and copyAndFreeXxx functions for options and optimize stack handling